@@ -16,6 +16,14 @@ configurations {
     }
 }
 
+configurations.configureEach {
+    /*exclude group: 'org.springframework.boot', module: 'spring-boot-starter-web'
+    exclude group: 'org.springframework.boot', module: 'spring-security-web'
+    exclude group: 'org.springframework.security', module: 'spring-security-web'
+    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'*/
+}
+
+
 repositories {
     mavenCentral()
     maven {
@@ -31,15 +39,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-json'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    // implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'org.springframework.boot:spring-boot-starter-logging'
     implementation 'org.springframework.amqp:spring-rabbit'
     implementation 'org.springframework.boot:spring-boot-starter-integration'
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.integration:spring-integration-amqp'
-    implementation 'org.springframework.integration:spring-integration-http'
     implementation 'org.springframework.integration:spring-integration-redis'
     implementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     implementation 'org.springframework.boot:spring-boot-starter-test'
@@ -47,39 +53,42 @@ dependencies {
     implementation 'com.baomidou:mybatis-plus:3.5.3.1'
     implementation 'com.baomidou:mybatis-plus-extension:3.5.3.1'
     implementation 'org.springframework.boot:spring-boot-starter-rsocket'
+    implementation 'io.cloudevents:cloudevents-spring:2.4.2'
+    implementation 'io.cloudevents:cloudevents-json-jackson:2.4.2'
     implementation 'org.springframework.amqp:spring-rabbit-test:3.0.3'
-    //implementation 'org.springframework.boot:spring-boot-starter-reactor-netty:3.0.2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'org.springframework.amqp:spring-rabbit-stream:3.0.3'
-    // knife4j
-    implementation 'com.github.xiaoymin:knife4j-openapi3-jakarta-spring-boot-starter:4.1.0'
-    //implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.2'
-    // Sa-Token 权限认证
-    implementation 'cn.dev33:sa-token-spring-boot3-starter:1.34.0'
-    // Sa-Token 整合 Redis （使用 jackson 序列化）
+    //implementation 'com.github.xiaoymin:knife4j-openapi3-webflux-jakarta-spring-boot-starter:4.1.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.1.0'
+    //implementation 'com.github.xiaoymin:knife4j-openapi3-ui:4.1.0'
     implementation 'cn.dev33:sa-token-dao-redis-jackson:1.34.0'
+    implementation 'org.apache.commons:commons-pool2'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
-    // Sa-Token
-    //implementation 'cn.dev33:sa-token-reactor-spring-boot3-starter:1.34.0'
+    implementation 'cn.dev33:sa-token-reactor-spring-boot3-starter:1.34.0'
+    //implementation 'cn.dev33:sa-token-spring-boot3-starter:1.34.0'
     implementation 'com.google.crypto.tink:tink:1.8.0'
-    implementation 'org.bouncycastle:bcprov-jdk15to18:1.72'
-    implementation 'org.questdb:questdb:7.0.1'
-    // hutool
-    implementation 'cn.hutool:hutool-all:5.8.16'
-    // mockito模拟对象
-    implementation 'org.mockito:mockito-core:5.2.0'
+    implementation 'org.bouncycastle:bcprov-jdk15to18:1.73'
+    implementation 'org.questdb:questdb:7.1'
+    implementation 'cn.hutool:hutool-all:5.8.17'
+    implementation 'org.mockito:mockito-core:5.3.0'
     implementation 'com.google.errorprone:error_prone_annotations:2.18.0'
-    // implementation 'com.redis.om:redis-om-spring:0.8.0'
+    //implementation 'com.redis.om:redis-om-spring:0.8.0'
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
-    //implementation 'org.springframework.security:spring-security-rsocket:6.0.1'
-    //implementation 'org.springframework.security:spring-security-messaging:6.0.1'
+    implementation 'org.springframework.security:spring-security-rsocket:6.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-security:3.0.5'
+    implementation 'org.springframework.security:spring-security-messaging:6.0.2'
+    implementation 'org.springframework.security:spring-security-config:6.0.2'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-oauth2-jose:6.0.2'
+    implementation 'org.springframework.security:spring-security-oauth2-resource-server:6.0.2'
+    implementation 'com.auth0:java-jwt:4.4.0'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'io.projectreactor:reactor-test'
+    testImplementation 'io.projectreactor:reactor-test:3.5.5'
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
     testImplementation 'org.springframework.integration:spring-integration-test'
 }
@@ -88,3 +97,17 @@ tasks.named('test') {
     outputs.dir snippetsDir
     useJUnitPlatform()
 }
+/*
+
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
+}
+*/
